Fixed socials icons on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ padding-right: 0;
     text-align: center;
   }
   .social-icons {
-    font-size: 4rem;
+    font-size: 5rem;
     margin-right: 20px;
   }
 
